# CS3210-Assignment-2

Football Match/: Ball.cpp  Ball.h  Element.cpp  Element.h  Field.cpp  Field.h  Global.h  Player.cpp  Player.h  Statistics.cpp  Statistics.h  main.cpp
Football Training/: Ball.cpp  Ball.h  CMakeLists.txt  Element.cpp  Element.h  Field.cpp  Field.h  Global.h  Player.cpp  Player.h  Statistics.cpp  Statistics.h  main.cpp
